# cgrid

./: .cardboardlint.yml  .gitignore  .roberto.yml  .travis.yml  .travis.yml.tpl  CMakeLists.txt  CMakeListsGTest.txt.in  CONTRIBUTING.rst  HEADER  README.md  README.rst  doxygen.conf.in  template.py
cgrid/: CMakeLists.txt  cellgrid.cpp  cellgrid.h  config.h.in  scalarfns.cpp  scalarfns.h
cgrid/tests/: CMakeLists.txt  common.cpp  common.h  ridders.h  test_scalarfns.cpp  test_supergrid.cpp
python-cgrid/: .cardboardlint.yml  .gitignore  .pylintrc  HEADER  setup.py
python-cgrid/cgrid/: __init__.py  cellgrid.pxd  ext.pxd  ext.pyx  scalarfns.pxd  test_cgrid.py
python-cgrid/tools/conda.recipe/: meta.yaml
python-qcgrids/: .cardboardlint.yml  .gitignore  .pylintrc  setup.cfg  setup.py
python-qcgrids/qcgrids/: __init__.py  cellgrid.pxd  ext.pxd  ext.pyx  qcgrids.pxd  qcgrids.pyx  scalarfns.pxd  subgrid.pxd  supergrid.pxd  test_qcgrids.py
python-qcgrids/tools/conda.recipe/: meta.yaml
qcgrids/: CMakeLists.txt  cellgrid.cpp  cellgrid.h  config.h.in  scalarfns.cpp  scalarfns.h  subgrid.cpp  subgrid.h  supergrid.cpp  supergrid.h
qcgrids/tests/: CMakeLists.txt  common.cpp  common.h  ridders.h  test_scalarfns.cpp  test_subgrid.cpp  test_supergrid.cpp
tools/: .travis-template.yml  .travis-template.yml.vars.yml  .travis.yml.tpl  checkcode.sh  cleancode.sh  codecleaner.py  coverage_analyze.py  coverage_clean.sh  cpplint.py  gitversion.py  pre-commit  template.py  travis_conda_build.sh  travis_inplace_build.sh  updateheaders.py
tools/conda.recipe/: build.sh  meta.yaml
